--- a/themes/tvh-news/html/email.html.twig
+++ b/themes/tvh-news/html/email.html.twig
@@ -248,41 +248,9 @@
                                                         <td align="center" valign="top" class="shrinker" style="padding: 0 60px; text-align: left;">
                                                             <p style="text-align: left; font-family: 'Open Sans', Verdana, Arial, sans-serif; font-size:18px; line-height:36px; font-weight:400; color:#212121; padding:0; margin:0;">
                                                                 <singleline>
-                                                                    Hello
+                                                                  Vintage Teak Niels Moller Dining table with set of 6 Model 75 chairs
                                                                 </singleline>
-                                                            </h2>
-                                                            <h3 style="text-align: left; font-family: 'Open Sans', Verdana, Arial, sans-serif; font-size:22px; line-height:30px; font-weight:400; color:#b2b2b2; padding:0; margin:0;">
-                                                                <singleline>
-                                                                    H3 Section Subheader
-                                                                </singleline>
-                                                            </h3>
-                                                            <br style="line-height: 14px; height: 14px; font-size: 14px; display: inline-block;">
-                                                            <p style="text-align: left; font-family: 'Open Sans', Verdana, Arial, sans-serif; font-size:16px; line-height:30px; font-weight:400; color:#212121; padding: 0; margin: 0;">
-                                                                <multiline>
-                                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean gravida mauris lectus, vitae semper ante rhoncus id. Duis vel accumsan lacus, et rutrum dui. Nunc rutrum ante justo, at lobortis enim faucibus cursus. Sed varius et odio in semper.
-                                                                </multiline>
                                                             </p>
-                                                            <br style="line-height: 18px; height: 18px; font-size: 18px;">
-                                                            <span style="text-align: left; font-family: 'Open Sans', Verdana, Arial, sans-serif; font-size:28px; line-height:0; font-weight:400; color:#b2b2b2; padding: 0; line-height: 24px;">__</span>
-                                                            <br>
-                                                            <br>
-                                                            <a href="#" style="text-decoration: none; text-align: left; font-family: 'Open Sans', Verdana, Arial, sans-serif; font-size:16px; line-height:16px; font-weight:700; color:#212121; padding: 0; margin: 0;">
-                                                                <singleline>
-                                                                    Call To Action Link
-                                                                </singleline>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="45" style="font-size: 45px; line-height: 45px;">&nbsp;</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td align="center" valign="top" class="shrinker" style="padding: 0 60px">
-                                                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:550px; background: #ffffff">
-                                                                <tr>
-                                                                    <td height="0" style="font-size: 0px; line-height: 0px; border-bottom: 1px solid #e8e8e8">&nbsp;</td>
-                                                                </tr>
-                                                            </table>
                                                         </td>
                                                     </tr>
                                                 </table>
